--- a/Graphics Engine/Graphics Engine.vcxproj
+++ b/Graphics Engine/Graphics Engine.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
