--- a/GMath/GMath.vcxproj
+++ b/GMath/GMath.vcxproj
@@ -118,20 +118,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Quat.cpp" />
     <ClCompile Include="src\Mat2.cpp" />
     <ClCompile Include="src\Mat3.cpp" />
     <ClCompile Include="src\Mat4.cpp" />
+    <ClCompile Include="src\Quat.cpp" />
     <ClCompile Include="src\Vec2.cpp" />
     <ClCompile Include="src\Vec3.cpp" />
     <ClCompile Include="src\Vec4.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Quat.h" />
     <ClInclude Include="src\Mat2.h" />
     <ClInclude Include="src\Mat3.h" />
     <ClInclude Include="src\Mat4.h" />
     <ClInclude Include="src\MathExceptions.h" />
+    <ClInclude Include="src\Quat.h" />
     <ClInclude Include="src\Vec2.h" />
     <ClInclude Include="src\Vec3.h" />
     <ClInclude Include="src\Vec4.h" />
