--- a/Graphics Engine/Graphics Engine.vcxproj
+++ b/Graphics Engine/Graphics Engine.vcxproj
@@ -130,12 +130,16 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\SceneGraph.cpp" />
+    <ClCompile Include="src\SceneNode.cpp" />
     <ClCompile Include="src\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\SceneGraph.h" />
+    <ClInclude Include="src\SceneNode.h" />
     <ClInclude Include="src\Shader.h" />
   </ItemGroup>
   <ItemGroup>
