--- a/Graphics Engine/Graphics Engine.vcxproj
+++ b/Graphics Engine/Graphics Engine.vcxproj
@@ -126,6 +126,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="src\Animation.cpp" />
     <ClCompile Include="src\Animator.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -140,6 +141,7 @@
     <ClCompile Include="src\Water.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Material.h" />
     <ClInclude Include="src\Animation.h" />
     <ClInclude Include="src\Animator.h" />
     <ClInclude Include="src\Camera.h" />
