--- a/Graphics Engine/Graphics Engine.vcxproj
+++ b/Graphics Engine/Graphics Engine.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="src\CubeMap.cpp" />
     <ClCompile Include="src\Engine.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\Material.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\SceneGraph.cpp" />
     <ClCompile Include="src\SceneNode.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\CubeMap.h" />
     <ClInclude Include="src\Engine.h" />
+    <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\NodeState.h" />
     <ClInclude Include="src\SceneGraph.h" />
